[package]
name = "rust_cumulus"
version = "0.1.0"
authors = ["Wadjetz <egor.neon@gmail.com>"]

[profile.release]
#lto = true # Binary size optiomisation, but realy longuer compile time

[dependencies]
rocket = "0.3.2"
rocket_codegen = "0.3.2"
juniper = { git = "https://github.com/graphql-rust/juniper", features = ["uuid"] }
juniper_rocket = { git = "https://github.com/graphql-rust/juniper_rocket" }

geo = "0.6.3"

r2d2 = "0.7.4"
r2d2_postgres = "0.13.0"
postgres =  { version = "0.15.1", features = ["with-serde_json", "with-uuid", "with-chrono", "with-geo"] }
postgres-derive = "0.3.1"
strum = "0.8.0"
strum_macros = "0.8.0"

serde = "1.0.14"
serde_derive = "1.0.14"
serde_json = "1.0.3"

uuid = { version = "0.5.1", features = ["serde", "v4"] }
chrono = "0.4.0"

lazy_static = "0.2.8"

jsonwebtoken = "2.0.3"
bcrypt = "0.1.4"
rust-crypto = "0.2.36"

feed-rs = "0.1.3"
hyper = "0.11.2"
reqwest = "0.8.0"
url = "1.5.1"

dotenv = "0.10.1"

error-chain = "0.11.0"
validator = "0.6.0"
validator_derive = "0.6.0"
