[package]
name = "rust_cumulus"
version = "0.1.0"
authors = ["Wadjetz <egor.neon@gmail.com>"]

[profile.release]
#lto = true # Binary size optiomisation, but realy longuer compile time

[dependencies]
rocket = "0.3.5"
rocket_codegen = "0.3.5"
rocket_contrib = { version = "0.3.5", features = ["json"] }
juniper = { version = "0.9.1", features = ["uuid"] }
juniper_codegen = "0.9.1"
juniper_rocket = { version = "0.1.1" }

geo = "0.6.3"

r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
r2d2-diesel = "1.0.0"
diesel = { version = "1.0.0", features = ["postgres", "uuid", "chrono", "serde_json"] }
postgres =  { version = "0.15.1", features = ["with-serde_json", "with-uuid", "with-chrono", "with-geo"] }
postgres-derive = "0.3.1"
strum = "0.8.0"
strum_macros = "0.8.0"

serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"

uuid = { version = "0.5.1", features = ["serde", "v4"] }
chrono = "0.4.0"

lazy_static = "1.0.0"

jsonwebtoken = "2.0.3"
bcrypt = "0.1.4"
rust-crypto = "0.2.36"

feed-rs = "0.1.3"
hyper = "0.11.6"
reqwest = "0.8.0"
url = "1.5.1"

dotenv = "0.10.1"

error-chain = "0.11.0"
validator = "0.6.3"
validator_derive = "0.6.1"
